fix: added gap in dropdown button

--- a/src/student/css/dropdown.css
+++ b/src/student/css/dropdown.css
@@ -15,6 +15,7 @@
   margin: 0;
   padding: 0;
   display: flex;
+  gap: 5px;
 }
 
 .dropdown-content {
